Compiladores-l/yacc resources/y.output
   0  $accept : program $end

   1  program :
   2          | sentences
   3          | error

   4  sentences : sentence ';'
   5            | sentence ';' sentences
   6            | sentence sentences
   7            | error ';'

   8  sentence : declaration
   9           | executable

  10  declaration : type variable_list
  11              | procedure
  12              | variable_list
  13              | type

  14  variable_list : ID
  15                | ID ',' variable_list

  16  type : ULONGINT
  17       | DOUBLE

  18  true_false : TRUE
  19             | FALSE

  20  procedure : PROC ID '(' parameter_list ')' na_shad_definition proc_body
  21            | PROC ID '(' ')' na_shad_definition proc_body
  22            | PROC ID '(' parameter_list ')' na_shad_definition
  23            | PROC ID '(' ')' na_shad_definition
  24            | PROC '(' parameter_list ')' na_shad_definition proc_body
  25            | PROC '(' ')' na_shad_definition proc_body
  26            | PROC ID '(' error ')' na_shad_definition proc_body

  27  na_shad_definition : NA '=' CONSTANT SHADOWING '=' true_false
  28                     | '=' CONSTANT SHADOWING '=' true_false
  29                     | NA CONSTANT SHADOWING '=' true_false
  30                     | NA '=' SHADOWING '=' true_false
  31                     | NA '=' CONSTANT '=' true_false
  32                     | NA '=' CONSTANT SHADOWING true_false

  33  proc_body : '{' sentences '}'
  34            | '{' error '}'
  35            | '{' '}'

  36  parameter_list : parameter
  37                 | parameter ',' parameter
  38                 | parameter ',' parameter ',' parameter
  39                 | parameter ',' parameter ',' parameter ',' parameter_list

  40  parameter : type ID
  41            | type
  42            | ID

  43  id_list : ID
  44          | ID ',' ID
  45          | ID ',' ID ',' ID
  46          | ID ',' ID ',' ID ',' id_list
  47          | error

  48  procedure_call : ID '(' id_list ')'
  49                 | ID '(' ')'

  50  executable : ID '=' expression
  51             | ID '=' error
  52             | error '=' expression
  53             | ID EQUAL expression
  54             | if_clause
  55             | loop_clause
  56             | procedure_call
  57             | out_clause

  58  comparator : EQUAL
  59             | NEQUAL
  60             | LESSEQUAL
  61             | GREATEQUAL
  62             | '<'
  63             | '>'
  64             | '<' '<'
  65             | '>' '>'
  66             | LESSEQUAL '='
  67             | GREATEQUAL '='
  68             | NEQUAL '='
  69             | '<' '>'

  70  condition : expression comparator expression
  71            | expression '=' expression

  72  sentence_block : '{' sentences '}'
  73                 | sentence ';'
  74                 | '{' '}'

  75  if_clause : IF '(' condition ')' sentence_block ELSE sentence_block END_IF
  76            | IF '(' condition ')' sentence_block END_IF
  77            | IF '(' condition ')' sentence_block ELSE sentence_block error
  78            | IF '(' condition ')' sentence_block error
  79            | IF '(' error ')' sentence_block ELSE sentence_block END_IF
  80            | IF '(' error ')' sentence_block END_IF
  81            | IF '(' condition ')' error ELSE sentence_block END_IF
  82            | IF '(' condition ')' sentence_block ELSE error END_IF
  83            | IF '(' condition ')' error END_IF
  84            | IF condition sentence_block ELSE sentence_block END_IF
  85            | IF condition sentence_block END_IF

  86  loop_clause : LOOP sentence_block UNTIL '(' condition ')'
  87              | LOOP sentence_block error
  88              | LOOP sentence_block UNTIL '(' error ')'
  89              | LOOP error UNTIL '(' condition ')'
  90              | LOOP sentence_block UNTIL condition

  91  out_clause : OUT '(' CSTRING ')'
  92             | OUT '(' error ')'
  93             | OUT CSTRING

  94  expression : expression '+' term
  95             | expression '-' term
  96             | term
  97             | expression '+' error
  98             | expression '-' error
  99             | error '+' term
 100             | error '-' term
 101             | expression '+' '+' term

 102  term : term '*' factor
 103       | term '/' factor
 104       | factor
 105       | term '*' error
 106       | term '/' error
 107       | error '*' factor
 108       | error '/' factor
 109       | term '*' '*' factor
 110       | term '/' '/' factor

 111  factor : ID
 112         | CONSTANT
 113         | '-' CONSTANT

state 0
	$accept : . program $end  (0)
	program : .  (1)

	error  shift 1
	IF  shift 2
	OUT  shift 3
	ULONGINT  shift 4
	DOUBLE  shift 5
	LOOP  shift 6
	ID  shift 7
	PROC  shift 8
	$end  reduce 1

	program  goto 9
	sentences  goto 10
	sentence  goto 11
	declaration  goto 12
	executable  goto 13
	type  goto 14
	variable_list  goto 15
	procedure  goto 16
	procedure_call  goto 17
	if_clause  goto 18
	loop_clause  goto 19
	out_clause  goto 20


state 1
	program : error .  (3)
	sentences : error . ';'  (7)
	executable : error . '=' expression  (52)

	';'  shift 21
	'='  shift 22
	$end  reduce 3


state 2
	if_clause : IF . '(' condition ')' sentence_block ELSE sentence_block END_IF  (75)
	if_clause : IF . '(' condition ')' sentence_block END_IF  (76)
	if_clause : IF . '(' condition ')' sentence_block ELSE sentence_block error  (77)
	if_clause : IF . '(' condition ')' sentence_block error  (78)
	if_clause : IF . '(' error ')' sentence_block ELSE sentence_block END_IF  (79)
	if_clause : IF . '(' error ')' sentence_block END_IF  (80)
	if_clause : IF . '(' condition ')' error ELSE sentence_block END_IF  (81)
	if_clause : IF . '(' condition ')' sentence_block ELSE error END_IF  (82)
	if_clause : IF . '(' condition ')' error END_IF  (83)
	if_clause : IF . condition sentence_block ELSE sentence_block END_IF  (84)
	if_clause : IF . condition sentence_block END_IF  (85)

	error  shift 23
	ID  shift 24
	CONSTANT  shift 25
	'('  shift 26
	'-'  shift 27
	.  error

	expression  goto 28
	condition  goto 29
	term  goto 30
	factor  goto 31


state 3
	out_clause : OUT . '(' CSTRING ')'  (91)
	out_clause : OUT . '(' error ')'  (92)
	out_clause : OUT . CSTRING  (93)

	CSTRING  shift 32
	'('  shift 33
	.  error


state 4
	type : ULONGINT .  (16)

	.  reduce 16


state 5
	type : DOUBLE .  (17)

	.  reduce 17


state 6
	loop_clause : LOOP . sentence_block UNTIL '(' condition ')'  (86)
	loop_clause : LOOP . sentence_block error  (87)
	loop_clause : LOOP . sentence_block UNTIL '(' error ')'  (88)
	loop_clause : LOOP . error UNTIL '(' condition ')'  (89)
	loop_clause : LOOP . sentence_block UNTIL condition  (90)

	error  shift 34
	IF  shift 2
	OUT  shift 3
	ULONGINT  shift 4
	DOUBLE  shift 5
	LOOP  shift 6
	ID  shift 7
	PROC  shift 8
	'{'  shift 35
	.  error

	sentence  goto 36
	declaration  goto 12
	executable  goto 13
	type  goto 14
	variable_list  goto 15
	procedure  goto 16
	procedure_call  goto 17
	if_clause  goto 18
	loop_clause  goto 19
	out_clause  goto 20
	sentence_block  goto 37


state 7
	variable_list : ID .  (14)
	variable_list : ID . ',' variable_list  (15)
	procedure_call : ID . '(' id_list ')'  (48)
	procedure_call : ID . '(' ')'  (49)
	executable : ID . '=' expression  (50)
	executable : ID . '=' error  (51)
	executable : ID . EQUAL expression  (53)

	EQUAL  shift 38
	','  shift 39
	'('  shift 40
	'='  shift 41
	error  reduce 14
	IF  reduce 14
	OUT  reduce 14
	ULONGINT  reduce 14
	DOUBLE  reduce 14
	LOOP  reduce 14
	ID  reduce 14
	PROC  reduce 14
	';'  reduce 14


state 8
	procedure : PROC . ID '(' parameter_list ')' na_shad_definition proc_body  (20)
	procedure : PROC . ID '(' ')' na_shad_definition proc_body  (21)
	procedure : PROC . ID '(' parameter_list ')' na_shad_definition  (22)
	procedure : PROC . ID '(' ')' na_shad_definition  (23)
	procedure : PROC . '(' parameter_list ')' na_shad_definition proc_body  (24)
	procedure : PROC . '(' ')' na_shad_definition proc_body  (25)
	procedure : PROC . ID '(' error ')' na_shad_definition proc_body  (26)

	ID  shift 42
	'('  shift 43
	.  error


state 9
	$accept : program . $end  (0)

	$end  accept


state 10
	program : sentences .  (2)

	.  reduce 2


state 11
	sentences : sentence . ';'  (4)
	sentences : sentence . ';' sentences  (5)
	sentences : sentence . sentences  (6)

	error  shift 44
	IF  shift 2
	OUT  shift 3
	ULONGINT  shift 4
	DOUBLE  shift 5
	LOOP  shift 6
	ID  shift 7
	PROC  shift 8
	';'  shift 45
	.  error

	sentences  goto 46
	sentence  goto 11
	declaration  goto 12
	executable  goto 13
	type  goto 14
	variable_list  goto 15
	procedure  goto 16
	procedure_call  goto 17
	if_clause  goto 18
	loop_clause  goto 19
	out_clause  goto 20


state 12
	sentence : declaration .  (8)

	.  reduce 8


state 13
	sentence : executable .  (9)

	.  reduce 9


14: shift/reduce conflict (shift 47, reduce 13) on ID
state 14
	declaration : type . variable_list  (10)
	declaration : type .  (13)

	ID  shift 47
	error  reduce 13
	IF  reduce 13
	OUT  reduce 13
	ULONGINT  reduce 13
	DOUBLE  reduce 13
	LOOP  reduce 13
	PROC  reduce 13
	';'  reduce 13

	variable_list  goto 48


state 15
	declaration : variable_list .  (12)

	.  reduce 12


state 16
	declaration : procedure .  (11)

	.  reduce 11


state 17
	executable : procedure_call .  (56)

	.  reduce 56


state 18
	executable : if_clause .  (54)

	.  reduce 54


state 19
	executable : loop_clause .  (55)

	.  reduce 55


state 20
	executable : out_clause .  (57)

	.  reduce 57


state 21
	sentences : error ';' .  (7)

	.  reduce 7


state 22
	executable : error '=' . expression  (52)

	error  shift 23
	ID  shift 24
	CONSTANT  shift 25
	'-'  shift 27
	.  error

	expression  goto 49
	term  goto 30
	factor  goto 31


state 23
	expression : error . '+' term  (99)
	expression : error . '-' term  (100)
	term : error . '*' factor  (107)
	term : error . '/' factor  (108)

	'+'  shift 50
	'-'  shift 51
	'*'  shift 52
	'/'  shift 53
	.  error


state 24
	factor : ID .  (111)

	.  reduce 111


state 25
	factor : CONSTANT .  (112)

	.  reduce 112


state 26
	if_clause : IF '(' . condition ')' sentence_block ELSE sentence_block END_IF  (75)
	if_clause : IF '(' . condition ')' sentence_block END_IF  (76)
	if_clause : IF '(' . condition ')' sentence_block ELSE sentence_block error  (77)
	if_clause : IF '(' . condition ')' sentence_block error  (78)
	if_clause : IF '(' . error ')' sentence_block ELSE sentence_block END_IF  (79)
	if_clause : IF '(' . error ')' sentence_block END_IF  (80)
	if_clause : IF '(' . condition ')' error ELSE sentence_block END_IF  (81)
	if_clause : IF '(' . condition ')' sentence_block ELSE error END_IF  (82)
	if_clause : IF '(' . condition ')' error END_IF  (83)

	error  shift 54
	ID  shift 24
	CONSTANT  shift 25
	'-'  shift 27
	.  error

	expression  goto 28
	condition  goto 55
	term  goto 30
	factor  goto 31


state 27
	factor : '-' . CONSTANT  (113)

	CONSTANT  shift 56
	.  error


state 28
	condition : expression . comparator expression  (70)
	condition : expression . '=' expression  (71)
	expression : expression . '+' term  (94)
	expression : expression . '-' term  (95)
	expression : expression . '+' error  (97)
	expression : expression . '-' error  (98)
	expression : expression . '+' '+' term  (101)

	LESSEQUAL  shift 57
	GREATEQUAL  shift 58
	EQUAL  shift 59
	NEQUAL  shift 60
	'='  shift 61
	'<'  shift 62
	'>'  shift 63
	'+'  shift 64
	'-'  shift 65
	.  error

	comparator  goto 66


state 29
	if_clause : IF condition . sentence_block ELSE sentence_block END_IF  (84)
	if_clause : IF condition . sentence_block END_IF  (85)

	error  shift 67
	IF  shift 2
	OUT  shift 3
	ULONGINT  shift 4
	DOUBLE  shift 5
	LOOP  shift 6
	ID  shift 7
	PROC  shift 8
	'{'  shift 35
	.  error

	sentence  goto 36
	declaration  goto 12
	executable  goto 13
	type  goto 14
	variable_list  goto 15
	procedure  goto 16
	procedure_call  goto 17
	if_clause  goto 18
	loop_clause  goto 19
	out_clause  goto 20
	sentence_block  goto 68


state 30
	expression : term .  (96)
	term : term . '*' factor  (102)
	term : term . '/' factor  (103)
	term : term . '*' error  (105)
	term : term . '/' error  (106)
	term : term . '*' '*' factor  (109)
	term : term . '/' '/' factor  (110)

	'*'  shift 69
	'/'  shift 70
	error  reduce 96
	IF  reduce 96
	OUT  reduce 96
	ULONGINT  reduce 96
	DOUBLE  reduce 96
	LOOP  reduce 96
	ID  reduce 96
	LESSEQUAL  reduce 96
	GREATEQUAL  reduce 96
	EQUAL  reduce 96
	NEQUAL  reduce 96
	PROC  reduce 96
	';'  reduce 96
	')'  reduce 96
	'='  reduce 96
	'{'  reduce 96
	'<'  reduce 96
	'>'  reduce 96
	'+'  reduce 96
	'-'  reduce 96


state 31
	term : factor .  (104)

	.  reduce 104


state 32
	out_clause : OUT CSTRING .  (93)

	.  reduce 93


state 33
	out_clause : OUT '(' . CSTRING ')'  (91)
	out_clause : OUT '(' . error ')'  (92)

	error  shift 71
	CSTRING  shift 72
	.  error


state 34
	executable : error . '=' expression  (52)
	loop_clause : LOOP error . UNTIL '(' condition ')'  (89)

	UNTIL  shift 73
	'='  shift 22
	.  error


state 35
	sentence_block : '{' . sentences '}'  (72)
	sentence_block : '{' . '}'  (74)

	error  shift 44
	IF  shift 2
	OUT  shift 3
	ULONGINT  shift 4
	DOUBLE  shift 5
	LOOP  shift 6
	ID  shift 7
	PROC  shift 8
	'}'  shift 74
	.  error

	sentences  goto 75
	sentence  goto 11
	declaration  goto 12
	executable  goto 13
	type  goto 14
	variable_list  goto 15
	procedure  goto 16
	procedure_call  goto 17
	if_clause  goto 18
	loop_clause  goto 19
	out_clause  goto 20


state 36
	sentence_block : sentence . ';'  (73)

	';'  shift 76
	.  error


state 37
	loop_clause : LOOP sentence_block . UNTIL '(' condition ')'  (86)
	loop_clause : LOOP sentence_block . error  (87)
	loop_clause : LOOP sentence_block . UNTIL '(' error ')'  (88)
	loop_clause : LOOP sentence_block . UNTIL condition  (90)

	error  shift 77
	UNTIL  shift 78
	.  error


state 38
	executable : ID EQUAL . expression  (53)

	error  shift 23
	ID  shift 24
	CONSTANT  shift 25
	'-'  shift 27
	.  error

	expression  goto 79
	term  goto 30
	factor  goto 31


state 39
	variable_list : ID ',' . variable_list  (15)

	ID  shift 47
	.  error

	variable_list  goto 80


state 40
	procedure_call : ID '(' . id_list ')'  (48)
	procedure_call : ID '(' . ')'  (49)

	error  shift 81
	ID  shift 82
	')'  shift 83
	.  error

	id_list  goto 84


state 41
	executable : ID '=' . expression  (50)
	executable : ID '=' . error  (51)

	error  shift 85
	ID  shift 24
	CONSTANT  shift 25
	'-'  shift 27
	.  error

	expression  goto 86
	term  goto 30
	factor  goto 31


state 42
	procedure : PROC ID . '(' parameter_list ')' na_shad_definition proc_body  (20)
	procedure : PROC ID . '(' ')' na_shad_definition proc_body  (21)
	procedure : PROC ID . '(' parameter_list ')' na_shad_definition  (22)
	procedure : PROC ID . '(' ')' na_shad_definition  (23)
	procedure : PROC ID . '(' error ')' na_shad_definition proc_body  (26)

	'('  shift 87
	.  error


state 43
	procedure : PROC '(' . parameter_list ')' na_shad_definition proc_body  (24)
	procedure : PROC '(' . ')' na_shad_definition proc_body  (25)

	ULONGINT  shift 4
	DOUBLE  shift 5
	ID  shift 88
	')'  shift 89
	.  error

	type  goto 90
	parameter_list  goto 91
	parameter  goto 92


state 44
	sentences : error . ';'  (7)
	executable : error . '=' expression  (52)

	';'  shift 21
	'='  shift 22
	.  error


state 45
	sentences : sentence ';' .  (4)
	sentences : sentence ';' . sentences  (5)

	error  shift 44
	IF  shift 2
	OUT  shift 3
	ULONGINT  shift 4
	DOUBLE  shift 5
	LOOP  shift 6
	ID  shift 7
	PROC  shift 8
	$end  reduce 4
	'}'  reduce 4

	sentences  goto 93
	sentence  goto 11
	declaration  goto 12
	executable  goto 13
	type  goto 14
	variable_list  goto 15
	procedure  goto 16
	procedure_call  goto 17
	if_clause  goto 18
	loop_clause  goto 19
	out_clause  goto 20


state 46
	sentences : sentence sentences .  (6)

	.  reduce 6


state 47
	variable_list : ID .  (14)
	variable_list : ID . ',' variable_list  (15)
